# Qt-thesis

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  Dockerfile  HOW_TO_RUN.md  LICENSE  MainWindow.cpp  MainWindow.h  MapCoordControlWidget.cpp  MapCoordControlWidget.h  MapWidget.cpp  MapWidget.h  README.md  cmd_example.cpp  main.cpp  tilerenderer.cpp  tilerenderer.h  tilerenderrules.cpp  tilerenderrules.h  vector_tile.proto  vectortile.cpp  vectortile.h
.github/workflows/: main.yml
Http client/HttpClient/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkcontroller.cpp  networkcontroller.h
Http client/build-HttpClient-Desktop_x86_windows_msys_pe_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Http client/build-HttpClient-Desktop_x86_windows_msys_pe_64bit-Debug/.cmake/api/v1/reply/: cache-v2-3fd94c6505b396e3e617.json  cmakeFiles-v1-c51775117fba7f3012f4.json  codemodel-v2-d1f6d7c1fd540fa44015.json  directory-.-Debug-1eb3465d1c85bedbdad7.json  index-2024-02-03T08-54-44-0284.json  target-HttpClient-Debug-055b4875d6d0101bb585.json  target-HttpClient_autogen-Debug-8d202f515c9f9528679c.json  target-HttpClient_autogen_timestamp_deps-Debug-5eaf09c0ab3abdb8301a.json
Http client/build-HttpClient-Desktop_x86_windows_msys_pe_64bit-Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Http client/build-HttpClient-Desktop_x86_windows_msys_pe_64bit-Debug/.qtc_clangd/: compile_commands.json
Http client/build-HttpClient-Desktop_x86_windows_msys_pe_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.1FD8CB43F2181AC1.idx  QFlags.780CB068C24AE6A2.idx  QIODevice.B6D44F28E00B3236.idx  QList.7EE5C3AFA6D9F4D5.idx  QMainWindow.9611E565D17BED1C.idx  QMetaType.C0478E17B24A063C.idx  QNetworkAccessManager.697FACC5AF234CD8.idx  QNetworkReply.63D02139093F6D3E.idx  QNetworkRequest.8CDDD7BAEC011F39.idx  QObject.3AE8043C580BBEB3.idx  QSharedDataPointer.36299335F7074912.idx  QSslConfiguration.D6EB59B61DDC7E1C.idx  QSslPreSharedKeyAuthenticator.C87C69EE20BDFBD8.idx  QString.E0FA725AB58F4099.idx  QUrl.852515B59E94D402.idx  QVariant.12A68EF85B38DD01.idx  _mingw.h.0EC373C0B08D177E.idx  (+578 more)
Http client/build-HttpClient-Desktop_x86_windows_msys_pe_64bit-Debug/HttpClient_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Http client/build-HttpClient-Desktop_x86_windows_msys_pe_64bit-Debug/HttpClient_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_networkcontroller.cpp  moc_networkcontroller.cpp.d
Http client/build-HttpClient-Desktop_x86_windows_msys_pe_64bit-Debug/HttpClient_autogen/include/: ui_mainwindow.h
Matthias prototype/: CMakeLists.txt  README.md  main.cpp  tilerenderer.cpp  tilerenderer.h  tilerenderrules.cpp  tilerenderrules.h  vectortile.cpp  vectortile.h
Matthias prototype/testData/: tiles.json  z12x2170y1190.mvt  z8x135y181.mvt
Protobuffers/: CMakeLists.txt  VectorTiles.cpp  VectorTiles.h  main.cpp  networkcontroller.cpp  networkcontroller.h
app/: MainWindow.cpp  MainWindow.h  MapCoordControlWidget.cpp  MapCoordControlWidget.h  MapPanControlWidget.cpp  MapPanControlWidget.h  MapRenderSettingsWidget.cpp  MapRenderSettingsWidget.h  MapWidget.cpp  MapWidget.h  MapZoomControlWidget.cpp  MapZoomControlWidget.h  main.cpp
lib/: Evaluator.cpp  Evaluator.h  LayerStyle.cpp  LayerStyle.h  LayerStyle_Background.cpp  LayerStyle_Fill.cpp  LayerStyle_Line.cpp  LayerStyle_NotImplemented.cpp  LayerStyle_Symbol.cpp  Layerstyle.cpp  Layerstyle.h  Layerstyle_Fill.cpp  Layerstyle_Line.cpp  Layerstyle_NotImplemented.cpp  Layerstyle_Symbol.cpp  NetworkController.cpp  NetworkController.h  Rendering.cpp  Rendering.h  Rendering_Line.cpp  Rendering_Math.cpp  Rendering_Polygon.cpp  Rendering_Text.cpp  RequestTilesResult.h  TileCoord.cpp  TileCoord.h  TileLoader.cpp  TileLoader.h  TileURL.cpp  TileURL.h  Utilities.cpp  Utilities.h  VectorTiles.cpp  VectorTiles.h  layerStyle_Background.cpp  networkcontroller.cpp  networkcontroller.h  x.h
testData/: z12x2170y2905.mvt
testdata/: tiles.json  z0x0y0.mvt  z1x0y0.mvt  z1x0y1.mvt  z1x1y0.mvt  z1x1y1.mvt  z2x0y0.mvt  z2x1y1.mvt  z2x1y2.mvt  z2x3y3.mvt
tests/merlin/: CMakeLists.txt  Merlin.cpp  README.md  rebuild_baseline.cpp  rendering_output_tests.cpp
tests/merlin/include/Bach/Merlin/: Merlin.h
tests/rendering/: OutputTester.cpp  OutputTester.h  rebuild_baseline.cpp  rendering_output_tests.cpp
tests/tile_parsing_benchmark/: CMakeLists.txt  tile_parsing_benchmark.cpp
tests/tile_parsing_benchmark/resources/: z1x1y0.mvt
tests/tileloader_threaded_benchmark/: CMakeLists.txt  tileloader_threaded_benchmark.cpp
tests/tileloader_threaded_benchmark/resources/: z2x0y1.mvt  z2x1y3.mvt  z2x2y1.mvt  z2x2y2.mvt  z2x2y3.mvt  z2x3y2.mvt  z3x0y0.mvt  z3x0y1.mvt  z3x0y2.mvt  z3x0y3.mvt  z3x0y4.mvt  z3x0y5.mvt  z3x0y6.mvt  z3x0y7.mvt  z3x1y0.mvt  z3x1y1.mvt  z3x1y2.mvt  z3x1y3.mvt  z3x1y4.mvt  z3x1y5.mvt  z3x1y6.mvt  z3x1y7.mvt  z3x2y0.mvt  z3x2y1.mvt  z3x2y2.mvt  z3x2y3.mvt  z3x2y4.mvt  z3x2y5.mvt  z3x2y6.mvt  z3x2y7.mvt  z3x3y0.mvt  z3x3y1.mvt  z3x3y2.mvt  z3x3y3.mvt  z3x3y4.mvt  z3x3y5.mvt  z3x3y6.mvt  z3x3y7.mvt  z3x4y1.mvt  z3x4y2.mvt  (+13 more)
tests/unit-tests/: testgettile.cpp  unittest_evaluator.cpp  unittesting.cpp  unittesting.h  unittesting_layerstyle.cpp  unittesting_rendering.cpp  unittesting_tileloader.cpp  unittesting_vectortile.cpp
tests/unit-tests/tileloader/: CMakeLists.txt  tileloader.cpp
tests/unit-tests/tileloader/loadTileFromCache_fails_on_broken_file/: file.mvt
tests/unit-tests/tileloader/loadTileFromCache_parses_cached_file_successfully/: file.mvt
unitTestResources/: expressionTest.json  styleTest.json  testkey.txt
unitTestResources/RenderOutputTesterBaseline/: testcases.json  z12x2170y1190.mvt
unitTestResources/RenderOutputTesterBaseline/input-files/: styleSheet.json  z0x0y0.mvt  z12x2169y1190.mvt  z12x2169y1191.mvt  z12x2170y1191.mvt  z1x0y0.mvt  z1x0y1.mvt  z1x1y1.mvt
unitTestResources/TileParsingBenchmark/: z2x0y0.mvt  z2x0y2.mvt  z2x0y3.mvt  z2x1y0.mvt  z2x1y1.mvt  z2x1y2.mvt  z2x2y0.mvt  z2x3y0.mvt  z2x3y1.mvt  z2x3y3.mvt
